tests/paczka1/small_fuzzy/67246243.err
Error in line 7: A411 A590 83,7
Error in line 6: luBKP A964 54,8
Error in line 13: A411 A964 2,2
